--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,11 @@ http://maven.apache.org/maven-v4_0_0.xsd">
          <artifactId>scala-library</artifactId>
          <version>${scala.version}</version>
       </dependency>
+      <dependency>
+	<groupId>com.github.nikita-volkov</groupId>
+	<artifactId>sext</artifactId>
+        <version>0.2.3</version>
+      </dependency>
       <!-- Test -->
       <dependency>
          <groupId>org.scalatest</groupId>
